--- a/Admin-WEB/en.html
+++ b/Admin-WEB/en.html
@@ -469,8 +469,7 @@
     signal.style.opacity = 0;
 
     // Generate a random image URL
-    const randomPhotoNumber = Math.floor(Math.random() * (20 - 1) + 1);
-    const imageUrl = `assets/images/file${count}/${randomPhotoNumber}.jpg`;
+    const imageUrl = `assets/images/file${count}/1.jpg`;
 
     // Set a timeout to update the image after 1 second
     setTimeout(() => {
