--- a/WEB/index.html
+++ b/WEB/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Choose Language</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="MobileOptimized" content="176" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="robots" content="noindex,nofollow" />
+    <script src="https://telegram.org/js/telegram-web-app.js?2"></script>
+    <title>Choose Language</title>
+    <style>
     @font-face {
         font-family: 'Intro';
         src: url('intro.otf') format('opentype');
@@ -25,25 +31,24 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
     }
     .button {
         background-color: orange;
         border: none;
         color: white;
-        padding: 10px;
+        padding: 10px; /* was 20px */
         text-align: center;
         text-decoration: none;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 32px;
-        margin: 5px;
+        font-size: 47px; /* was 32px */
+        margin: 2px 7.5px; /* was 4px 15px */
         cursor: pointer;
-        width: 200px;
-        height: 80px;
+        width: 257px; /* was 200px */
+        height: 100px; /* was 100px */
         transition: all 0.3s ease;
-        border-radius: 10px;
+        border-radius: 7.5px; /* was 15px */
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         position: relative;
         overflow: hidden;
@@ -52,7 +57,7 @@
         content: "";
         position: absolute;
         top: 0;
-        left: -50px;
+        left: -37.5px; /* was -75px */
         width: 300%;
         height: 100%;
         background: rgba(255, 255, 255, 0.2);
@@ -65,44 +70,15 @@
     .button:hover {
         background-color: #e69500;
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
-        transform: translateY(-1px);
+        transform: translateY(-1px); /* was -2px */
     }
     h1 {
         color: white;
-        margin-bottom: 20px;
-        font-size: 48px;
-        text-align: center;
+        margin-bottom: 20px; /* was 40px */
+        font-size: 71px; /* was 64px */
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     }
-
-    /* Адаптация для телефонов */
-    @media (max-width: 768px) {
-        .button {
-            font-size: 24px;
-            width: 150px;
-            height: 60px;
-            padding: 8px;
-        }
-        h1 {
-            font-size: 36px;
-            margin-bottom: 15px;
-        }
-    }
-
-    @media (max-width: 480px) {
-        .button {
-            font-size: 18px;
-            width: 120px;
-            height: 50px;
-            padding: 5px;
-        }
-        h1 {
-            font-size: 28px;
-            margin-bottom: 10px;
-        }
-    }
 </style>
-
 </head>
 <body>
     <h1>Choose Language</h1>
