--- a/WEB/rus.html
+++ b/WEB/rus.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="MobileOptimized" content="176" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="robots" content="noindex,nofollow" />
+    <script src="https://telegram.org/js/telegram-web-app.js?2"></script>
     <title>Интерактивная страница</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
       <style>
@@ -13,6 +19,7 @@
 
         body {
             background-image: url('fon.jpg');
+            background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             display: flex;
@@ -52,14 +59,14 @@
     transform: translate(-50%, -50%);
     display: none; /* Initially hidden */
     z-index: 10;
-    width: 20%;
-    height: 20%;
+    width:220px;
+    height: 220px;
     perspective: 1200px;
 }
 
 .loader div[class^="atom"] {
-    width: 20%;
-    height: 20%;
+    width:220px;
+    height: 220px;
     border-radius: 50%;
     border-width: 4px;
     position: absolute;
@@ -158,7 +165,7 @@
 
         #trap-count-label {
             margin-top: 20px;
-            font-size: 10px; /* Smaller font size */
+            font-size: 70px; /* Smaller font size */
             color: white;
             font-family: 'Intro', sans-serif;
             font-weight: bold;
@@ -169,7 +176,7 @@
             align-items: center;
             justify-content: center;
             margin: 10px 0;
-            width: 60%;
+            width: 674px;
         }
 
         .count-display {
@@ -190,7 +197,6 @@
         #loading-text {
             cursor: default;
             text-align: center;
-            margin-top: 50px;
             margin-bottom: 8px; /* Smaller bottom margin */
             /* font-family: 'Intro', sans-serif; */
         }
@@ -198,17 +204,18 @@
         .bot_name {
             display: flex;
             align-items: center;
+            margin-top: 30px;
             cursor: pointer;
         }
 
         .telegram-icon{
             margin-right: 10px;
-            width: 20%;
-            height: 20%;
+            width: 78px;
+            height: 78px;
         }
 
         #botName {
-            font-size: 30px;
+            font-size: 58px;
             font-weight: bolder;
             color: #ffa500;
             text-transform: lowercase;
@@ -218,7 +225,7 @@
         #loading-text span {
             display: inline-block;
             animation: bounce 0.3s ease infinite alternate;
-            font-size: 50px; /* Smaller font size */
+            font-size: 90px; /* Smaller font size */
             color: rgb(209, 178, 5);
             text-shadow: 0 0.25px 0 #ccc, 0 0.5px 0 #ccc, 0 0.75px 0 #ccc, 0 1px 0 #ccc,
                         0 1.25px 0 #ccc, 0 1.5px 0 transparent, 0 1.75px 0 transparent, 0 2px 0 transparent,
@@ -259,8 +266,8 @@
         }
 
         .img-signal {
-            width: 99%;
-            height: 99%;
+            width: 700px;
+            height: 700px;
             border-radius: 10px;
             transition: 0.1s;
             z-index: 30;
@@ -316,51 +323,6 @@
             transform: scale(1.15);
             box-shadow: 0 0 36px 15px rgba(0, 0, 0, 0.3);
         }
-
-        /* Мобильная оптимизация */
-@media (max-width: 768px) { 
-    .container { padding: 4px; box-shadow: 0 1px 3px rgba(0,0,0,0.05), 0 0 4px 2px #ffa500; }
-.grid {
-    grid-template-columns: repeat(5, 30px);
-    grid-template-rows: repeat(5, 30px);
-    gap: 4px;
-}
-
-.square {
-    border-radius: 2px;
-}
-
-button {
-    padding: 10px 20px;
-    font-size: 30px;
-}
-
-#trap-count-label {
-    font-size: 30px;
-}
-
-.count-display {
-    width: 20px;
-    font-size: 45px;
-    margin-left: 8px;
-}
-
-.icon {
-    width: 35px;
-    height: 35px;
-}
-
-.slider {
-    height: 35px;
-    border-radius: 10px;
-}
-
-.slider::-webkit-slider-thumb,
-.slider::-moz-range-thumb {
-    width: 28px;
-    height: 28px;
-}
-}
     </style>
 </head>
 <body>
