--- a/WEB/index.html
+++ b/WEB/index.html
@@ -81,10 +81,12 @@
 </style>
 </head>
 <body>
+    <div class="root">
     <h1>Choose Language</h1>
     <div class="buttons">
         <a href="rus.html" class="button">ESP</a>
         <a href="en.html" class="button">ENG</a>
+    </div>
     </div>
 </body>
 </html>
