--- a/WEB/index.html
+++ b/WEB/index.html
@@ -27,6 +27,12 @@
         align-items: center;
         margin: 0;
     }
+
+    .root {
+        width: 100%;
+        height: 100%
+    }
+    
     .buttons {
         display: flex;
         justify-content: center;
