--- a/WEB/index.html
+++ b/WEB/index.html
@@ -46,8 +46,8 @@
         font-size: 20px; /* was 32px */
         margin: 2px 7.5px; /* was 4px 15px */
         cursor: pointer;
-        width: 250px; /* was 200px */
-        height: 100px; /* was 100px */
+        width: 7em; /* was 200px */
+        height: 30px; /* was 100px */
         transition: all 0.3s ease;
         border-radius: 7.5px; /* was 15px */
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -76,7 +76,7 @@
     h1 {
         color: white;
         margin-bottom: 20px; /* was 40px */
-        font-size: 71px; /* was 64px */
+        font-size: 32px; /* was 64px */
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     }
 </style>
