--- a/WEB/en.html
+++ b/WEB/en.html
@@ -34,7 +34,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 100%; /* Slightly smaller than before */
+            width: 80%; /* Slightly smaller than before */
+            height: 100%;
         }
 
         .container {
