--- a/WEB/en.html
+++ b/WEB/en.html
@@ -21,7 +21,7 @@
             background-image: url('fon.jpg');
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             display: flex;
             justify-content: center;
             align-items: center;
