--- a/WEB/index.html
+++ b/WEB/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.4, minimum-scale=0.3, maximum-scale=0.4, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, initial-scale=1.0, initial-scale=1.0, user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="HandheldFriendly" content="True" />
@@ -17,7 +17,7 @@
     body {
         font-family: 'Intro', sans-serif;
         background-image: url('fon.jpg');
-        background-size: cover;
+        background-size: contain;
         background-position: center;
         height: 100vh;
         display: flex;
