--- a/WEB/en.html
+++ b/WEB/en.html
@@ -19,7 +19,7 @@
 
         body {
             background-image: url('fon.jpg');
-            background-size: cover;
+            background-size: contain;
             background-position: center;
             background-repeat: repeat;
             display: flex;
