--- a/WEB/index.html
+++ b/WEB/index.html
@@ -18,7 +18,7 @@
         font-family: 'Intro', sans-serif;
         background-image: url('fon.jpg');
         background-size: contain;
-        background-repeat: repeat;
+        background-repeat: no-repeat;
         background-position: center;
         height: 100vh;
         display: flex;
