--- a/WEB/rus.html
+++ b/WEB/rus.html
@@ -19,9 +19,9 @@
 
         body {
             background-image: url('fon.jpg');
-            background-size: cover;
+            background-size: contain;
             background-position: center;
-            background-repeat: repeat;
+            background-repeat: no-repeat;
             display: flex;
             justify-content: center;
             align-items: center;
