--- a/WEB/index.html
+++ b/WEB/index.html
@@ -17,7 +17,7 @@
     body {
         font-family: 'Intro', sans-serif;
         background-image: url('fon.jpg');
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         height: 100vh;
