--- a/WEB/rus.html
+++ b/WEB/rus.html
@@ -34,7 +34,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 100%; /* Slightly smaller than before */
+            width: 80%; /* Slightly smaller than before */
+            height: 100%;
         }
 
         .container {
@@ -142,7 +143,7 @@
             border-radius: 6px; /* Smaller radius */
             background-color: #000000;
             color: white;
-            font-size: 45px; /* Reduced font size */
+            font-size: 20px; /* Reduced font size */
             cursor: pointer;
             transition: all 0.3s ease;
             box-shadow: 0 2px 3.5px rgba(0, 0, 0, 0.15); /* Subtler shadow */
@@ -165,7 +166,7 @@
 
         #trap-count-label {
             margin-top: 20px;
-            font-size: 70px; /* Smaller font size */
+            font-size: 30px; /* Smaller font size */
             color: white;
             font-family: 'Intro', sans-serif;
             font-weight: bold;
@@ -215,7 +216,7 @@
         }
 
         #botName {
-            font-size: 58px;
+            font-size: 20px;
             font-weight: bolder;
             color: #ffa500;
             text-transform: lowercase;
@@ -225,7 +226,7 @@
         #loading-text span {
             display: inline-block;
             animation: bounce 0.3s ease infinite alternate;
-            font-size: 90px; /* Smaller font size */
+            font-size: 40px; /* Smaller font size */
             color: rgb(209, 178, 5);
             text-shadow: 0 0.25px 0 #ccc, 0 0.5px 0 #ccc, 0 0.75px 0 #ccc, 0 1px 0 #ccc,
                         0 1.25px 0 #ccc, 0 1.5px 0 transparent, 0 1.75px 0 transparent, 0 2px 0 transparent,
@@ -266,8 +267,8 @@
         }
 
         .img-signal {
-            width: 700px;
-            height: 700px;
+            width: 100%;
+            height: 100%;
             border-radius: 10px;
             transition: 0.1s;
             z-index: 30;
@@ -277,8 +278,8 @@
 
         .slider {
             -webkit-appearance: none;
-            width: 100%; /* Увеличенная длина слайдера */
-            height: 50px; /* Увеличенная высота слайдера */
+            width: 30%; /* Увеличенная длина слайдера */
+            height: 30px; /* Увеличенная высота слайдера */
             background: linear-gradient(to right, #57c1eb, #246fa8);
             outline: none;
             opacity: 0.9;
