--- a/WEB/en.html
+++ b/WEB/en.html
@@ -27,6 +27,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
 
         .main-container {
@@ -273,7 +274,7 @@
             transition: 0.1s;
             z-index: 30;
             transition: opacity 0.5s ease-in-out; /* Smooth fade transition */
-            opacity: 1; /* Default opacity */
+            opacity: 0.5; /* Default opacity */
         }
 
         .slider {
