--- a/WEB/en.html
+++ b/WEB/en.html
@@ -338,7 +338,7 @@
                 <div class="atom-2"></div>
                 <div class="atom-3"></div>
             </div>
-            <img draggable="false" src="assets/images/default.jpg" id="img-signal" alt="signal" class="img-signal">
+            <img draggable="false" src="assets:images/default.jpg" id="img-signal" alt="signal" class="img-signal">
         </div>
         <div id="trap-count-label">NUMBER OF MINES</div>
         <div id="counter-container">
@@ -459,7 +459,7 @@
     // function getSignal() {
     //     // buttonGetSignal.disabled = true;
     //     const randomPhotoNumber = Math.floor(Math.random() * (20 - 1) + 1);
-    //     signal.src = `assets/images/file${count}/${randomPhotoNumber}.jpg`;
+    //     signal.src = `assets:images/file${count}/${randomPhotoNumber}.jpg`;
     //     signal.classList.add("active")
     // }
 
@@ -479,7 +479,7 @@
 
     // Generate a random image URL
     const randomPhotoNumber = Math.floor(Math.random() * (20 - 1) + 1);
-    const imageUrl = `assets/images/file${count}/${randomPhotoNumber}.jpg`;
+    const imageUrl = `assets:images/file${count}/${randomPhotoNumber}.jpg`;
 
     // Set a timeout to update the image after 1 second
     setTimeout(() => {
