--- a/Royal/index.html
+++ b/Royal/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Negocio Game</title>
+    <title>GURU HACK</title>
     <style>
         @font-face {
             font-family: 'Intro';
@@ -29,7 +29,7 @@
             justify-content: space-evenly; /* Более равномерное распределение кнопок */
             align-items: center; /* Выравнивание кнопок по центру по вертикали */
             margin-top: 10px; /* Уменьшаем верхний отступ */
-            margin-bottom: 10px; /* Уменьшаем нижний отступ */
+            margin-bottom: 0px; /* Уменьшаем нижний отступ */
             width: 100%;
             max-width: 400px; /* Ограничиваем максимальную ширину контейнера */
             padding: 0 10px; /* Добавляем отступы по бокам */
@@ -130,9 +130,119 @@
         .square.active img {
             opacity: 1;
         }
+
+        
+			@keyframes loading {
+
+0% {
+    width: 100%;
+}
+
+100% {
+    width: 0%;
+}
+}
+
+
+#loading-text span {
+display: inline-block;
+animation: bounce 0.3s ease infinite alternate;
+font-size: 42px;
+color: rgb(209, 178, 5);
+text-shadow: 0 0.25px 0 #ccc, 0 0.5px 0 #ccc, 0 0.75px 0 #ccc, 0 1px 0 #ccc,
+            0 1.25px 0 #ccc, 0 1.5px 0 transparent, 0 1.75px 0 transparent, 0 2px 0 transparent,
+            0 2.25px 0 transparent, 0 2.5px 2.5px rgba(0, 0, 0, 0.2);
+}
+
+#loading-text span:nth-child(1) { animation-delay: 0s; }
+#loading-text span:nth-child(2) { animation-delay: 0.1s; }
+#loading-text span:nth-child(3) { animation-delay: 0.2s; }
+#loading-text span:nth-child(4) { animation-delay: 0.3s; }
+#loading-text span:nth-child(5) { animation-delay: 0.4s; }
+#loading-text span:nth-child(6) { animation-delay: 0.5s; }
+#loading-text span:nth-child(7) { animation-delay: 0.6s; }
+
+@keyframes bounce {
+0% {
+    transform: translateY(0px);
+    text-shadow: 0 0.25px 0 #ccc, 0 0.5px 0 #ccc, 0 0.75px 0 #ccc, 0 1px 0 #ccc,
+                0 1.25px 0 #ccc, 0 1.5px 0 transparent, 0 1.75px 0 transparent, 0 2px 0 transparent,
+                0 2.25px 0 transparent, 0 2.5px 2.5px rgba(0, 0, 0, 0.2);
+}
+100% {
+    transform: translateY(-5px);
+    text-shadow: 0 0.25px 0 #ccc, 0 0.5px 0 #ccc, 0 0.75px 0 #ccc, 0 1px 0 #ccc,
+                0 1.25px 0 #ccc, 0 1.5px 0 transparent, 0 1.75px 0 transparent, 0 2px 0 transparent,
+                0 2.25px 0 transparent, 0 12.5px 6.25px rgba(0, 0, 0, 0.1);
+}
+}
+
+.tg_icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+} 
+
+
+/* Стили для кнопки */
+.button2 {
+    width: 300px;
+    height: 50px;
+    border-radius: 12px;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0.08em;
+    border: none;
+    display: flex
+;
+    align-items: center;
+    justify-content: center;
+    color: rgb(221, 221, 221);
+    text-shadow: rgb(138, 138, 138) 0px 0px 20px;
+    background: transparent;
+    box-shadow: none;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    top: 10px;
+}
+
+/* Псевдоэлемент для прозрачного прямоугольника под кнопкой */
+.button2::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: blue;
+    border-radius: 12px;
+    z-index: -1;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+}
+
+/* Дополнительные стили для кнопки при наведении (опционально) */
+.button2:hover::before {
+    background: rgba(0, 0, 0, 0.3); /* Изменение фона при наведении */
+}
+
     </style>
 </head>
 <body>
+    <div class="winner">
+        <h1 id="loading-text" class="win">
+            <span>G</span>
+            <span>U</span>
+            <span>R</span>
+            <span>U</span>
+            <span>H</span>
+            <span>A</span>
+            <span>C</span>
+            <span>K</span>
+        </h1>
+    </div>
     <div>
         <select id="fieldSelect">
             <option value="6x15">6x15</option>
@@ -147,10 +257,15 @@
 
     <!-- Контейнер для кнопок play и reset -->
     <div class="button-container" id="buttonContainer">
-        <button class="play-button">Играть</button>
-        <button class="reset-button">Сброс</button>
+        <button class="play-button">GAME</button>
+        <button class="reset-button">RESET</button>
     </div>
-
+    <a target="_blank2">
+        <button class="button2">
+            <img class="tg_icon" src="images/Telegram_logo.svg">
+            @luckyguruhack
+        </button>
+    </a>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', () => {
