--- a/Royal/index.html
+++ b/Royal/index.html
@@ -403,7 +403,7 @@ text-shadow: 0 0.25px 0 #ccc, 0 0.5px 0 #ccc, 0 0.75px 0 #ccc, 0 1px 0 #ccc,
 
         playButton.addEventListener('click', () => {
             if (dotsCount >= maxDots) {
-                alert('Игра окончена!');
+                alert('Game over!');
                 return;
             }
 
