--- a/MENU/index.html
+++ b/MENU/index.html
@@ -657,7 +657,7 @@
 				<img src="./static/2.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Mines (Turbo)</h3>
-					<a href="https://minesguruhack.github.io/GuruHack/turbo/index_en.html">
+					<a href="https://minesguruhack.github.io/GuruHack/turbomines/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -666,7 +666,7 @@
 				<img src="./static/3.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Mines (1win)</h3>
-					<a href="https://minesguruhack.github.io/GuruHack/1win/index_en.html">
+					<a href="https://minesguruhack.github.io/GuruHack/mines1w/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -675,7 +675,7 @@
 				<img src="./static/4.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Royal Mines</h3>
-					<a href="https://minesguruhack.github.io/GuruHack/ROYAL/">
+					<a href="https://minesguruhack.github.io/GuruHack/royalmines/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -684,7 +684,7 @@
 				<img src="./static/5.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Goal (Spribe)</h3>
-					<a href="https://minesguruhack.github.io/GuruHack/FOOT/">
+					<a href="https://minesguruhack.github.io/GuruHack/goalspribe/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -693,7 +693,7 @@
 				<img src="./static/6.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Bombucks</h3>
-					<a href="https://minesguruhack.github.io/GuruHack/bomb/">
+					<a href="https://minesguruhack.github.io/GuruHack/bombnew/">
 						<button>Open</button>
 					</a>
 				</div>
