--- a/bombnew/index.html
+++ b/bombnew/index.html
@@ -434,7 +434,7 @@
     <a target="_blank2">
         <button class="button2">
             <img class="tg_icon" src="images/Telegram_logo.svg">
-            @luckyguruhack
+            @minesguruhack
         </button>
     </a>
 
