--- a/royalmines/index.html
+++ b/royalmines/index.html
@@ -278,7 +278,7 @@
     <a target="_blank2">
         <button class="button2">
             <img class="tg_icon" src="images/Telegram_logo.svg">
-            @luckyguruhack
+            @minesguruhack
         </button>
     </a>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
