--- a/spribe/index.html
+++ b/spribe/index.html
@@ -546,7 +546,7 @@
     <a target="_blank2">
         <button class="button2">
             <img class="tg_icon" src="./static/Telegram_logo.svg">
-            @luckyguruhack
+            @minesguruhack
         </button>
     </a>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
