--- a/bombnew/index.html
+++ b/bombnew/index.html
@@ -402,7 +402,7 @@
 </head>
 
 <body>
-    <a href="https://minesguruhack.github.io/GuruHack/WEB/">
+    <a href="https://minesguruhack.github.io/GuruHack/WEB1/">
         <img src="images/back.png" alt="Кнопка назад" class="clickable-image">
     </a>
     
