--- a/goalspribe/index.html
+++ b/goalspribe/index.html
@@ -241,7 +241,7 @@
     </style>
 </head>
 <body>
-    <a href="https://minesguruhack.github.io/GuruHack/WEB/">
+    <a href="https://minesguruhack.github.io/GuruHack/WEB1/">
         <img src="static/back.png" alt="Кнопка назад" class="clickable-image">
     </a>
     <div class="winner">
