--- a/turbomines/index.html
+++ b/turbomines/index.html
@@ -670,7 +670,7 @@
 		</style>
 	</head>
 	<body>
-		<a href="https://minesguruhack.github.io/GuruHack/WEB/">
+		<a href="https://minesguruhack.github.io/GuruHack/WEB1/">
 			<img src="images/back.png" alt="Кнопка назад" class="clickable-image">
 		</a>
 		<div id="notification">
