--- a/LUCKYMENU/index.html
+++ b/LUCKYMENU/index.html
@@ -610,7 +610,7 @@
 		<div class="about-text">
 			<h2>GURUHACK</h2>
 			<span class="typing-text" style="opacity: 0.5;"></span>
-			<button onclick="window.location.href='https://t.me/+RG8kgI9AHSMwYTUy';" class="about-button">
+			<button onclick="window.location.href='https://t.me/luckyguruhack';" class="about-button">
 			Go to Telegram
 			</button>
 		</div>
