--- a/LUCKYMENU/index.html
+++ b/LUCKYMENU/index.html
@@ -681,7 +681,7 @@
 				<img src="./static/3.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Mines (1win)</h3>
-					<a href="https://minesguruhack.github.io/GuruHack/mines/">
+					<a href="https://minesguruhack.github.io/GuruHack/Mines/">
 							<button>Open</button>
 						</a>					
 				</div>
