--- a/DEMOMENUDEVI/index.html
+++ b/DEMOMENUDEVI/index.html
@@ -721,7 +721,7 @@
 				font-size: 16px;
 				color: #666;
 				line-height: 1.5;
-				margin-top: 10px;">To access signals, you need to synchronize your account in the bot. To do this, simply follow the instructions. After successful synchronization, you will be able to use all available signals. 
+				margin-top: 10px;">To access signals, you need to synchronize your account in the bot. To do this, open the bot, send the command /start and follow the instructions for registration. After successful synchronization, you will be able to use all available signals. 
 			   If you encounter any difficulties, you can always contact support through the bot, and we will help you.</p>
 			<p style="
 				font-size: 16px;
