--- a/XLAV/index.html
+++ b/XLAV/index.html
@@ -25,7 +25,7 @@
         <p class="name-bot"></p>  <!-- Thymeleaf expression -->
       </div>
       <div class="button-game">
-        <a href="" class="" target="_blank">@XLSOFTBOT</a>
+        <a href="https://t.me/xlsoft" class="game-here" target="_blank">@XLSOFTBOT</a>
       </div>      
     </div>
   </div>
