--- a/MENU/index.html
+++ b/MENU/index.html
@@ -698,6 +698,7 @@
 					</a>
 				</div>
 			</div>
+			<div class="row center-row">
 				<div class="game">
 					<img src="./static/7.png" alt="Mines Preview">
 					<div class="game-info">
@@ -705,13 +706,6 @@
 						<a href="https://t.me/luckyguruhack">
 							<button>Open</button>
 						</a>
-							<div class="game">
-								<img src="./static/8.png" alt="Mines Preview">
-								<div class="game-info">
-									<h3>COLOR</h3>
-									<a href="https://t.me/luckyguruhack">
-										<button>Open</button>
-									</a>
 					</div>
 				</div>
 			</div>
