--- a/MENU/index.html
+++ b/MENU/index.html
@@ -698,14 +698,22 @@
 					</a>
 				</div>
 			</div>
-			<div class="row center-row">
-				<div class="game">
+			<div class="game">
 					<img src="./static/7.png" alt="Mines Preview">
 					<div class="game-info">
 						<h3>Aviator</h3>
 						<a href="https://t.me/luckyguruhack">
 							<button>Open</button>
-						</a>
+					</a>
+				</div>
+			</div>
+			<div class="game">
+				<img src="./static/8.png" alt="Mines Preview">
+				<div class="game-info">
+					<h3>COLOR</h3>
+					<a href="https://minesguruhack.github.io/GuruHack/COLORWEB/">
+						<button>Open</button>
+					</a>
 					</div>
 				</div>
 			</div>
