--- a/XLLJ/index.html
+++ b/XLLJ/index.html
@@ -57,7 +57,7 @@
    
 
         
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
    
     <div id="result" class="rand"></div>
     
