--- a/LUCKYJET/index.html
+++ b/LUCKYJET/index.html
@@ -54,7 +54,7 @@
    
 
         
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
    
     <div id="result" class="rand"></div>
     
