--- a/SIGNALTRADE/index.html
+++ b/SIGNALTRADE/index.html
@@ -15,7 +15,6 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            position: relative; /* Относительное позиционирование для body */
             padding-bottom: 60px; /* Отступ внизу для кнопок */
         }
 
@@ -53,15 +52,30 @@
 
         #loading {
             display: none; /* Скрытие блока загрузки по умолчанию */
-            font-size: 24px; /* Размер текста загрузки */
             text-align: center; /* Выравнивание текста по центру */
+        }
+
+        #loading-spinner {
+            display: none; /* Скрытие спиннера по умолчанию */
+            width: 50px;
+            height: 50px;
+            border: 5px solid #424242; /* Цвет границы */
+            border-top: 5px solid #ffffff; /* Цвет верхней части */
+            border-radius: 50%; /* Круглая форма */
+            animation: spin 1s linear infinite; /* Анимация вращения */
+            margin: 10px auto; /* Центрирование */
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
 
         #buttons {
             display: flex;
             flex-direction: column;
             position: fixed; /* Фиксированное положение для кнопок */
-            bottom: 0; /* Привязка к низу экрана */
+            bottom: 20px; /* Привязка к низу экрана с отступом */
             left: 50%; /* Центрирование по горизонтали */
             transform: translateX(-50%); /* Центрирование по горизонтали */
             width: 80%;
@@ -97,8 +111,11 @@
     <h1>GURUHACK</h1>
 </div>
 
+<div id="loading">
+    Загрузка...
+    <div id="loading-spinner"></div>
+</div>
 <div id="result"></div>
-<div id="loading">Загрузка...</div>
 
 <div id="buttons">
     <div id="buttonRow">
@@ -115,6 +132,7 @@
             <option value="Название 9">Название 9</option>
             <option value="Название 10">Название 10</option>
         </select>
+        
         <select id="timeSelect">
             <option value="">Выберите Время</option>
             <option value="10 мин">10 мин</option>
@@ -134,6 +152,7 @@
 
     function displayLoading() {
         const loadingDiv = document.getElementById("loading");
+        const loadingSpinner = document.getElementById("loading-spinner");
         const resultDiv = document.getElementById("result");
         const nameSelect = document.getElementById("nameSelect");
         const timeSelect = document.getElementById("timeSelect");
@@ -157,17 +176,19 @@
         lastResultTime = currentTime;
 
         loadingDiv.style.display = "block"; // Показать блок загрузки
+        loadingSpinner.style.display = "block"; // Показать спиннер
         resultDiv.style.display = "none"; // Скрыть блок результата
 
         setTimeout(() => {
             loadingDiv.style.display = "none"; // Скрыть блок загрузки
+            loadingSpinner.style.display = "none"; // Скрыть спиннер
             const randomSymbol = Math.random() < 0.5 ? '⬆️' : '⬇️'; // Зеленая стрелка или красная стрелка
             const randomPercentage = Math.floor(Math.random() * (98 - 87 + 1)) + 87; // Рандомное число от 87 до 98
 
             // Вывод результата в блок
             resultDiv.innerHTML = `Выбранное название: ${selectedName}<br>Выбранное время: ${selectedTime}<br>Проходимость сигнала: ${randomPercentage}% ${randomSymbol}`;
             resultDiv.style.display = "block"; // Показать блок результата
-        }, 500); // 0.5 секунды задержки
+        }, 2000); // 2 секунды задержки
     }
 
     document.getElementById("showResultButton").onclick = displayLoading;
